# yeyo

./: .isort.cfg  .pydocstylerc  .travis.yml  .yeyo.json  .yeyo.yaml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  VERSION  docker-compose.yaml  pyproject.toml
.github/: main.workflow
yeyo/: __init__.py  cli.py  config.py
yeyo/test/: test_cli.py  test_config.py
