[tool.poetry]
name = "yeyo"
version = "0.2.0-dev.2"
description = "Hey-o for yeyo."
authors = ["Trent Hauck <trent@trenthauck.com>"]

homepage = "https://www.github.com/tshauck/yeyo"
readme = "README.md"
repository = "https://github.com/tshauck/yeyo"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.0"
semver = "^2.8"
pytest = "^4.0"
jinja2 = "^2.10"
requests = "^2.21"
docker = "^3.6"
GitPython = "^2.1"

[tool.poetry.dev-dependencies]
python-language-server = {version = "^0.21.4",extras = ["rope"]}
pytest-cov = "^2.6"
ipdb = "^0.11.0"
isort = "^4.3"
pydocstyle = "^3.0"

[tool.poetry.plugins."console_scripts"]
"yeyo" = "yeyo.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 100
py36 = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | build
  | dist
)/
'''
